# gusbemacbe.co.nz

./: .env  .gitignore  .gitmodules  Dockerfile  Procfile  commands  data.json  db.sqlite3  docker-compose.yml  heroku.yml  manage.py  package-lock.json  package.json  pyproject.toml  release  requirements.txt  runserver  tree.txt  urls.py  views.py
AparecidaCovidTracker/: .gitignore  .gitrepo  README.md  admin.py  apps.py  models.py  views.py
AparecidaCovidTracker/migrations/: 0001_initial.py
assets/css/: colours.css  covid-19.css  financial-planning.css  fonts.css  global.css  home.css  portfolio.css  projects.css
assets/js/: covid-19-teste-1.js  covid-19-teste-2.js  covid-19.js  portfolio.js
backup/: Aptfile  docker-requirements.txt  requirements.txt
backup/databases/: 2021-06-19-09:15-db.sqlite3  2021-06-19-18:28-db.sqlite3  2021-06-19-18:44-db.sqlite3  2021-06-19-19:23-db.sqlite3  2021-06-20-01:00-db.sqlite3  2021-07-10-12:04-db.sqlite3  2021-11-03-20:31-db.sqlite3  data.json  (+1 more)
contrib/: env_gen.py
docker/: docker-compose.yml
dockerfiles/: arch
expense/: admin.py  models.py  urls.py  views.py
financial_planning/: admin.py  models.py  tests.py  urls.py  views.py
frontend/: README.md  index.html  package-lock.json  package.json
gusbemacbe/: asgi.py  settings.py  urls.py  wsgi.py
home/: models.py  views.py
notes/: links.txt
portfolio/: admin.py  urls.py  views.py
projects/: urls.py  views-2.py  views.py
scripts/: backup.py  tool-size.py
staticfiles/: staticfiles.json
templates/: base.html  footer.html  navbar-backup-2.html  navbar.html
(+191 files in other folders)
