[tool.poetry]
name = "gusbemacbe.co.nz"
version = "1.2.4"
description = "My personal and professional website"
authors = ["Gustavo Costa <gusbemacbe@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
asgiref = "^3.3.4"
dj-database-url = "^0.5.0"
Django = "^3.2.4"
django-dbbackup = "^3.3.0"
django-extensions = "^3.1.3"
django-heroku = "^0.3.1"
django-smuggler = "^1.0.2"
django-sslserver = "^0.22"
djangorestframework = "^3.12.4"
forex-python = "^1.6"
gunicorn = "^20.1.0"
pandas = "^1.2.4"
psycopg2-binary = "^2.9.1"
pymdown-extensions = "^8.2"
python-decouple = "^3.4"
pytz = "^2021.1"
sqlparse = "^0.4.1"
whitenoise = "^5.2.0"
django-currencies = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
